--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,33 +5,27 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
-  <title>PrimeFaces Hello World Example</title>
+	<title>PrimeFaces Hello World Example</title>
 </h:head>
 
-<h:body>
-  <h:form id="helloworld-form">
+<h:body
+	style="margin: 0; padding: 0; display: grid; place-content: center; min-height: 100vh;">
+	<h:form id="loginView">
+		<p:panel header="Login">
+			<h:panelGrid columns="2" cellpadding="4">
+				<h:outputText value="Usuario " />
+				<p:inputText id="usuario" />
 
-    <p:panel header="PrimeFaces Hello World Example">
-      <h:panelGrid columns="2" cellpadding="4">
-        <h:outputText value="First Name: " />
-        <p:inputText id="first-name" value="#{helloWorld.firstName}" />
-
-        <h:outputText value="Last Name: " />
-        <p:inputText id="last-name" value="#{helloWorld.lastName}" />
-
-        <p:commandButton id="submit" value="Submit"
-          update="greeting-panel"
-          oncomplete="PF('greetingDialog').show()" />
-      </h:panelGrid>
-    </p:panel>
-
-    <p:dialog header="Greeting" widgetVar="greetingDialog"
-      modal="true" resizable="false">
-      <h:panelGrid id="greeting-panel" columns="1" cellpadding="4">
-        <h:outputText value="#{helloWorld.showGreeting()}" />
-      </h:panelGrid>
-    </p:dialog>
-
-  </h:form>
+				<h:outputText value="Senha " />
+				<p:inputText id="senha" />
+			</h:panelGrid>
+			
+			<br/>
+			
+			<div align="center">
+				<p:commandButton id="entrar" value="Entrar" />
+			</div>
+		</p:panel>
+	</h:form>
 </h:body>
 </html>
