Criado arquivo CSS externo

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,11 +5,10 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
-	<title>PrimeFaces Hello World Example</title>
+	<link rel="stylesheet" type="text/css" href="CSS/index.css"/>
 </h:head>
 
-<h:body
-	style="margin: 0; padding: 0; display: grid; place-content: center; min-height: 100vh;">
+<h:body>
 	<h:form id="loginView">
 		<p:panel header="Login">
 			<h:panelGrid columns="2" cellpadding="4">
