--- a/src/main/webapp/pages/pvt/cadastro.xhtml
+++ b/src/main/webapp/pages/pvt/cadastro.xhtml
@@ -14,7 +14,7 @@
 		<p:panel header="Cadastro">
 			<h:panelGrid columns="2" cellpadding="4">
 					<p:outputLabel value="Nome"/>
-					<p:inputText/>
+					<p:inputText value="#{CadastroBean.nome}"/>
 			
 					<p:outputLabel value="Sobrenome"/>
 					<p:inputText/>
@@ -32,7 +32,7 @@
 			<br/>
 			
 			<div align="center">
-				<p:button value="Cadastrar"/>	
+				<p:commandButton value="Cadastrar" action="#{CadastroBean.cadastrar}" ajax="false"/>	
 			</div>
 
 		</p:panel>
